# GenAI_Assignment

./: .gitignore  README.md
A01 - LiteLLM and LangGraph Analysis/: report_A01_Implementation.md  report_A01_LangGraph.md  report_A01_LiteLLM.md  report_A01_LiteLLM_vs_LangGraph.md
A01 - LiteLLM and LangGraph Analysis/examples/: .env.example  README.md  config.yaml  local_config.yaml  pyproject.toml  simple_langgraph_demo.py
A02 - LLM Fine-tuning Guide/: report_A02_Fine_tuning_Guide.md
A02 - LLM Fine-tuning Guide/examples/: config_example.json  evaluation_script.py  lora_training_example.py  requirements.txt
