[project]
name = "LiteLLM and LangGraph Demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-prebuilt>=0.5.2",
    "langgraph-sdk>=0.1.72",
    "langsmith>=0.4.4",
    "litellm[proxy]>=1.73.6.post1",
    "notebook>=7.4.4",
    "prisma>=0.15.0",
    "tavily-python>=0.7.9",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
